Implement entry-search --period
This option allows one to search for entries based on an English
description of a time period.

Signed-off-by: Michael Hendricks <michael@ndrix.org>

--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
-* implement entry-search --period in terms of --between
+* fix entry-search --period tests so that they pass regardless of the
+  user's time zone
+
 * each entry should record an 'identity' field for the person recording it
   (this allows one person to pull entries from multiple people and run
   handy reports on the result.  this probably means that each identity
