--- a/docs/environment.pod
+++ b/docs/environment.pod
@@ -1,8 +1,10 @@
-=head1 NAME Environment Variables
+=head1 NAME
+
+Environment Variables
 
 =head1 DESCRIPTION
 
-Various environment variables affect the way that that clk runs.
+Various environment variables affect the way that that clk operates.
 The following documentation decribes those variables, which
 commands they influence and how.
 
@@ -14,7 +16,7 @@ Contains a filesystem path to a directory which should be used
 to store all of clk's data.  clk sets this variable to
 F<./play> if it's not set already.
 
-=head1 CLK_TIME
+=head2 CLK_TIME
 
 A time in epoch seconds.  If this variable is set, clk-in uses it
 as its own time reference.  If the variable is not set, the current
