push and pull commands are necessary before the first release
Signed-off-by: Michael Hendricks <michael@ndrix.org>

--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 * clk rpt
 * clk edit
 * clk in /something-rare (clk in by searching for a template)
+* clk pull
+* clk push
 
 
 # at some point we might want to do these too
