Rough implementation of a list command
This command outputs information about entries for today.  The output
format is:

    467d5e 01/01 21:42 the value of the "text:" key

Any search criteria that entry-search understands can be given to the
list command to restrict which entries are shown.

Signed-off-by: Michael Hendricks <michael@ndrix.org>

--- a/todo
+++ b/todo
@@ -1,4 +1,8 @@
 * clk rpt
+* clk entry-search --tail N (matches only the last N entries)
+* clk entry-search --output content,duration (includes duration info)
+* incorporate duration information into the 'list' output
+
 * clk edit
 * clk in /something-rare (clk in by searching for a template)
 * clk pull
