Factor out generally useful reporting code
One can now easily create a new report by simply iterating over the
matching entries and outputting the data you want.

Signed-off-by: Michael Hendricks <michael@ndrix.org>

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
-* clk rpt
+* clk list
+* document the list command
 * clk entry-search --tail N (matches only the last N entries)
 * clk entry-search --output content,duration (includes duration info)
 * incorporate duration information into the 'list' output
