Remember to implement the 'rm' command
Signed-off-by: Michael Hendricks <michael@ndrix.org>

--- a/todo
+++ b/todo
@@ -5,6 +5,7 @@
       the merge iterator.
 
 * clk edit
+* clk rm
 * clk in /something-rare (clk in by searching for a template)
 * clk pull
 * clk push
